# Forest-Fire-ML_LR

./: application.py  pyproject.toml
notebooks/: forest_fire.ipynb
templates/: home.html
